--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,4 +12,4 @@ jobs:
         with:
             who-to-greet: Dean
       - name: Log Greeting Time
-        run: echo "${{ steps.grett.outputs.time }}"
+        run: echo "${{ steps.greet.outputs.time }}"
