Push to specific branches

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,12 @@
 name: Actions Workflow
 
 on: 
+  push:
+    branches:
+      - master
+      - 'feature/*'
+    tags:
+      - v1.*
   #schedule:
   # cron "*minutes* *hours* *dayofmonth* *month* *dayofweek*" crontab.guru
   #  - cron: ""
